@@ -23,6 +23,12 @@ public class DoctorService {
     private final PatientRepository patientRepo;
     private final PasswordEncoder encoder;
 
+    public DoctorService(DoctorRepository repo, PatientRepository patientRepo, PasswordEncoder encoder) {
+        this.repo = repo;
+        this.patientRepo = patientRepo;
+        this.encoder = encoder;
+    }
+
     private DoctorGetDto toDto(Doctor doctor) {
         return new DoctorGetDto(
                 doctor.getCpf(),
@@ -32,46 +38,37 @@ public class DoctorService {
                 doctor.getCrm(),
                 doctor.getSpeciality(),
                 doctor.getPatients().stream()
-                        .map(Patient::getEmail)
+                        .filter(patient -> Boolean.TRUE.equals(patient.getActive()))
+                        .map(p -> p.getEmail())
                         .collect(Collectors.toList()));
     }
 
-    public DoctorService(DoctorRepository repo, PatientRepository patientRepo, PasswordEncoder encoder) {
-        this.repo = repo;
-        this.patientRepo = patientRepo;
-        this.encoder = encoder;
-    }
-
     public List<DoctorGetDto> findAll() {
-        return repo.findAll().stream()
+        return repo.findAllByActiveTrue().stream()
                 .map(this::toDto)
                 .toList();
     }
 
     public DoctorGetDto findById(Long id) {
-        Doctor doctor = repo.findById(id)
-                .orElseThrow(() -> new ResourceNotFoundException("Médico com id " + id + " não encontrado"));
+        Doctor doctor = findByIdIntern(id);
         return toDto(doctor);
     }
 
     private Doctor findByIdIntern(Long id) {
-        return repo.findById(id)
+        return repo.findByIdAndActiveTrue(id)
                 .orElseThrow(() -> new ResourceNotFoundException("Médico com id " + id + " não encontrado"));
     }
 
     public Doctor save(DoctorPostAndPutDto dto) {
-        // Verificar duplicidade antes de criar
-        if (repo.findByCpf(dto.getCpf()).isPresent()) {
+        if (repo.findByCpf(dto.getCpf()).isPresent())
             throw new ResourceConflictException("CPF já cadastrado!");
-        }
-        if (repo.findByEmail(dto.getEmail()).isPresent()) {
-            throw new ResourceConflictException("Email já cadastrado!");
-        }
-        if (repo.findByCrm(dto.getCrm()).isPresent()) {
-            throw new ResourceConflictException("CRM já cadastrado!");
-        }
 
-        // Criar novo médico
+        if (repo.findByEmail(dto.getEmail()).isPresent())
+            throw new ResourceConflictException("Email já cadastrado!");
+
+        if (repo.findByCrm(dto.getCrm()).isPresent())
+            throw new ResourceConflictException("CRM já cadastrado!");
+
         Doctor doctor = new Doctor();
         doctor.setCpf(dto.getCpf());
         doctor.setName(dto.getName());
@@ -81,86 +78,47 @@ public class DoctorService {
         doctor.setSpeciality(dto.getSpeciality());
         doctor.setPassword(encoder.encode(dto.getPassword()));
         doctor.setType(dto.getUserType());
-        doctor.setPatients(null);
-
-        // No momento da criacao nao vai existir pacientes associados
-        /*
-         * List<String> patientEmails = dto.getPatientEmails();
-         * if (patientEmails != null) {
-         * patientEmails.forEach(email -> {
-         * Patient patient = patientRepo.findByEmail(email)
-         * .orElseThrow(() -> new ResourceNotFoundException(
-         * "Paciente com email " + email + " não encontrado"));
-         * doctor.getPatients().add(patient);
-         * patient.getDoctors().add(doctor);
-         * });
-         * }
-         */
+        doctor.setActive(Boolean.TRUE);
 
         return repo.save(doctor);
     }
 
     @Transactional
-    public Doctor update(Long id, Doctor doctor, List<String> patientEmails) {
-        Doctor existing = findByIdIntern(id);
+public DoctorGetDto update(Long id, DoctorPostAndPutDto dto) {
+    Doctor existing = findByIdIntern(id);
 
-        existing.setName(doctor.getName());
-        existing.setCpf(doctor.getCpf());
-        existing.setEmail(doctor.getEmail());
-        existing.setPhone(doctor.getPhone());
-        existing.setCrm(doctor.getCrm());
-        existing.setSpeciality(doctor.getSpeciality());
-
-        if (patientEmails != null) {
-            existing.getPatients().forEach(p -> p.getDoctors().remove(existing));
-            existing.getPatients().clear();
-
-            patientEmails.forEach(email -> {
-                Patient patient = patientRepo.findByEmail(email)
-                        .orElseThrow(() -> new ResourceNotFoundException(
-                                "Paciente com email " + email + " não encontrado"));
-                existing.getPatients().add(patient);
-                patient.getDoctors().add(existing);
-            });
-        }
-
-        return repo.save(existing);
+    existing.setName(dto.getName());
+    existing.setCpf(dto.getCpf());
+    existing.setEmail(dto.getEmail());
+    existing.setPhone(dto.getPhone());
+    existing.setCrm(dto.getCrm());
+    existing.setSpeciality(dto.getSpeciality());
+    if (dto.getPassword() != null && !dto.getPassword().isBlank()) {
+        existing.setPassword(encoder.encode(dto.getPassword()));
     }
+
+    repo.save(existing);
+    return toDto(existing);
+}
 
     public void delete(Long id) {
         Doctor doctor = findByIdIntern(id);
-        repo.delete(doctor);
-    }
-
-    public List<BasicDtoForList> searchUsersByDoc(Doctor doctor) {
-        return doctor.getPatients().stream()
-                .map(patient -> new BasicDtoForList(
-                        patient.getId(),
-                        patient.getName(),
-                        patient.getEmail(),
-                        patient.getPhone(),
-                        patient.getType()))
-                .toList();
+        doctor.setActive(Boolean.FALSE);
+        repo.save(doctor);
     }
 
     public List<BasicDtoForList> searchUsersByDoc(Long id, String query, String serviceType) {
-        
-        Doctor doctor = findByIdIntern(id);
+        var doctor = findByIdIntern(id);
         List<Patient> patients;
 
-        if ((query == null || query.isBlank()) && (serviceType == null || serviceType.isBlank())) {
-            patients = patientRepo.findByDoctors(doctor);
+        if (query == null || query.trim().isEmpty()) {
+            patients = patientRepo.findByDoctorsAndActiveTrue(doctor);
         } else {
-            patients = patientRepo.findByDoctorWithFilters(doctor.getId(), query, serviceType);
+            patients = patientRepo.findByDoctorsAndActiveTrueAndNameContainingIgnoreCase(doctor, query);
         }
 
         return patients.stream()
-                .map(patient -> new BasicDtoForList(
-                        patient.getId(),
-                        patient.getName(),
-                        patient.getEmail(),
-                        patient.getPhone(),
-                        patient.getType()))
+                .map(p -> new BasicDtoForList(p.getId(), p.getName(), p.getEmail(), p.getPhone(), p.getType()))
                 .toList();
     }
 }
